--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>
       Hello World!
+      <!-- This is a comment! -->
     </title>
   </head>
   <body>
